--- a/.htaccess
+++ b/.htaccess
@@ -19,9 +19,9 @@
 # http://www.w3.org/TR/cors/
 # https://code.google.com/p/html5security/wiki/CrossOriginRequestSecurity
 
-# <IfModule mod_headers.c>
-#     Header set Access-Control-Allow-Origin "*"
-# </IfModule>
+<IfModule mod_headers.c>
+    Header set Access-Control-Allow-Origin "*"
+</IfModule>
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
