--- a/.htaccess
+++ b/.htaccess
@@ -210,6 +210,8 @@ ErrorDocument 404 /404.html
     AddType text/vtt                                    vtt
     AddType text/x-component                            htc
     AddType text/x-vcard                                vcf
+	
+	AddType application/x-httpd-php .html
 
 </IfModule>
 
